<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>stub-idp</groupId>
    <artifactId>stub-idp-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <!-- language version -->
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <kotlin.compiler.jvmTarget>16</kotlin.compiler.jvmTarget>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <kotlin.version>1.9.10</kotlin.version>

        <!-- build plugins -->
        <maven_assembly_plugin.version>3.6.0</maven_assembly_plugin.version>
        <maven_compiler_plugin.version>3.10.1</maven_compiler_plugin.version>
        <maven_dependency_plugin.version>3.6.0</maven_dependency_plugin.version>
        <maven_failsafe_plugin.version>3.1.2</maven_failsafe_plugin.version>
        <maven_jar_plugin.version>3.3.0</maven_jar_plugin.version>
        <maven_surefire_plugin.version>3.1.2</maven_surefire_plugin.version>

        <!-- runtime dependencies -->
        <caffeine.version>3.1.8</caffeine.version>
        <checker_qual.version>3.35.0</checker_qual.version>
        <commons_codec.version>1.15</commons_codec.version>
        <commons_text.version>1.10.0</commons_text.version>
        <commons_validator.version>1.7</commons_validator.version>
        <dropwizard.version>2.1.4</dropwizard.version>
        <flyway.version>9.22.2</flyway.version>
        <freemarker.version>2.3.32</freemarker.version>
        <jackson.version>2.14.2</jackson.version>
        <jade4j.version>1.3.2</jade4j.version>
        <jakarta_activation.version>1.2.2</jakarta_activation.version>
        <jakarta_inject.version>1.0.1</jakarta_inject.version>
        <jakarta_validation.version>2.0.2</jakarta_validation.version>
        <jakarta_xml_bind.version>2.3.3</jakarta_xml_bind.version>
        <jbcrypt.version>0.4-atlassian-1</jbcrypt.version>
        <jdbi.version>3.41.2</jdbi.version>
        <jsoup.version>1.16.1</jsoup.version>
        <logback.version>1.2.11</logback.version>
        <logstash_logback_encoder.version>7.3</logstash_logback_encoder.version>
        <nimbus_jwt.version>9.23</nimbus_jwt.version>
        <opensaml.version>4.3.0</opensaml.version>
        <postgres.version>42.6.0</postgres.version>
        <prometheus_client.version>0.16.0</prometheus_client.version>
        <shibboleth_utils.version>8.3.1</shibboleth_utils.version>
        <slf4j.version>1.7.36</slf4j.version>
        <snakeyaml.version>2.2</snakeyaml.version>

        <!-- transitive dependencies (mainly updates to opensaml) -->
        <bouncycastle.version>1.70</bouncycastle.version>
        <cryptacular.version>1.2.5</cryptacular.version>
        <guava.version>32.1.2-jre</guava.version>
        <httpclient.version>4.5.14</httpclient.version>
        <spring.version>6.0.11</spring.version>
        <xmlsec.version>3.0.2</xmlsec.version>

        <!-- test dependencies -->
        <assertj.version>3.24.2</assertj.version>
        <h2.version>2.1.214</h2.version>
        <junit.version>5.10.0</junit.version>
        <jsonorg.version>20230227</jsonorg.version>
        <mockito.version>5.5.0</mockito.version>
        <wiremock.version>2.27.2</wiremock.version>
    </properties>

    <modules>
        <module>integration-tests</module>
        <module>shared-lib</module>
        <module>stub-idp</module>
        <module>stub-sp</module>
        <module>lib/dropwizard-jade</module>
        <module>lib/dropwizard-logstash</module>
        <module>lib/dropwizard-prometheus</module>
        <module>saml/saml-domain</module>
        <module>saml/saml-extensions</module>
        <module>saml/saml-hub</module>
        <module>saml/saml-metadata-bindings</module>
        <module>saml/saml-security</module>
        <module>saml/saml-serializers</module>
        <module>saml/saml-utils</module>
        <module>saml/trust-anchor</module>
        <module>sp/matching-service-adapter</module>
        <module>sp/service-provider</module>
        <module>sp/test-rp</module>
        <module>test/dev-pki</module>
        <module>test/saml-test</module>
        <module>test/test-utils</module>
        <module>utils/common-utils</module>
        <module>utils/rest-utils</module>
        <module>utils/security-utils</module>
    </modules>

    <repositories>
        <repository>
            <id>jcenter</id>
            <url>https://jcenter.bintray.com</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
        <repository>
            <id>shibboleth opensaml</id>
            <url>https://build.shibboleth.net/nexus/content/repositories/releases</url>
            <snapshots><enabled>false</enabled></snapshots>
        </repository>
    </repositories>

    <build>
        <plugins>
            <!--https://mark.koli.ch/fail-build-on-java-compiler-warnings-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven_compiler_plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>-Xlint:-processing</arg>
                        <arg>-Xlint:-serial</arg>
                        <arg>-Werror</arg>
                    </compilerArgs>
                    <!--                    <failOnError>true</failOnError>-->
                    <!--                    <failOnWarning>false</failOnWarning>-->
                    <!--                    <showDeprecation>true</showDeprecation>-->
                    <!--                    <showWarnings>false</showWarnings>-->
                    <!--                    <forceJavacCompilerUse>false</forceJavacCompilerUse>-->
                    <!--                    <verbose>false</verbose>-->
                </configuration>
                <!-- https://kotlinlang.org/docs/reference/using-maven.html -->
                <executions>
                    <!-- Replacing default-compile as it is treated specially by maven -->
                    <execution>
                        <id>default-compile</id>
                        <phase>none</phase>
                    </execution>
                    <!-- Replacing default-testCompile as it is treated specially by maven -->
                    <execution>
                        <id>default-testCompile</id>
                        <phase>none</phase>
                    </execution>
                    <execution>
                        <id>java-compile</id>
                        <phase>compile</phase>
                        <goals> <goal>compile</goal> </goals>
                    </execution>
                    <execution>
                        <id>java-test-compile</id>
                        <phase>test-compile</phase>
                        <goals> <goal>testCompile</goal> </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven_surefire_plugin.version}</version>
                <configuration>
                    <!-- test order is different locally vs travis and leads to failures -->
                    <runOrder>alphabetical</runOrder>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven_failsafe_plugin.version}</version>
                <configuration>
                    <!-- test order is different locally vs travis and leads to failures -->
                    <runOrder>alphabetical</runOrder>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
